Fix tooltip layout issue

--- a/scss/_chart.scss
+++ b/scss/_chart.scss
@@ -17,4 +17,12 @@
       margin-left: 6px;
     }
   }
+
+  .c3-tooltip-container {
+    width: 150px;
+    .c3-tooltip {
+      border-collapse: collapse;
+    }
+  }
 }
+
